[package]
name = "bevy_erosion_filter"
version = "0.1.0"
authors = ["Korbin de Man <korbindeman4@gmail.com>"]
edition = "2024"
rust-version = "1.89.0"
license = "MPL-2.0"
description = "GPU-friendly per-fragment erosion filter for Bevy, ported from Rune Skovbo Johansen's Shadertoy."
repository = "https://github.com/korbindeman/bevy_erosion_filter"
documentation = "https://docs.rs/bevy_erosion_filter"
readme = "README.md"
keywords = ["bevy", "terrain", "erosion", "noise", "procedural"]
categories = ["game-development", "graphics", "rendering"]
exclude = [
    "screenshots/",
    ".github/",
    "rust-toolchain.toml",
]

[features]
default = ["bevy"]
# Pull in the Bevy plugin (`ErosionFilterPlugin`) and the GPU uniform layout
# (`ErosionFilterParamsGpu`). Disable to use only the pure-Rust `cpu` module
# from non-Bevy crates (offline baking, build tools, engines other than Bevy).
bevy = ["dep:bevy"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_render", "bevy_asset"], optional = true }
glam = "0.30"

[dev-dependencies]
bevy = { version = "0.18", features = ["wayland"] }
bevy_egui = "0.39.0"
